--- a/fssim_description/cars/gotthard/config/sensors.yaml
+++ b/fssim_description/cars/gotthard/config/sensors.yaml
@@ -29,7 +29,7 @@ stream_track:
 
 sensors:
   lidar:
-    enabled: true
+    enabled: false
     topic: lidar/raw
     pos:
       x: 0.75
@@ -37,9 +37,9 @@ sensors:
       z: 0.15
 
   velocity:
-    noise_vx_sigma:  0.01                # Sigma of gaussian noise on respectible velocity estimate
-    noise_vy_sigma:  0.01                # Sigma of gaussian noise on respectible velocity estimate 
-    noise_r_sigma:   0.01                # Sigma of gaussian noise on respectible velocity estimate
+    noise_vx_sigma:  0.5                # Sigma of gaussian noise on respectible velocity estimate
+    noise_vy_sigma:  1.0                # Sigma of gaussian noise on respectible velocity estimate 
+    noise_r_sigma:   0.5                # Sigma of gaussian noise on respectible velocity estimate
 
   lidar_pipeline:
     enabled: true
@@ -50,35 +50,35 @@ sensors:
       enabled: true
       frame: fssim/vehicle/base_link      # Frame the cones are represented in
 
-    rate: 15                              # Publishing frequency [Hz]
+    rate: 10                              # Publishing frequency [Hz]
 
     delay: 
-      time: 0.2                           # Delay [s]
+      time: 0.01                           # Delay [s]
       noise_sigma: 0.002                  # Additive gassian noise on delay 
 
 
     cut_cones_below_x:            -1      # Cut cones that are further than this distance in x car axis
 
-    observation_radius:           8.0    # Below this threshold we can observe cones [m]
+    observation_radius:           20.0    # Below this threshold we can observe cones [m]
     distance_dependent_observation: 100.0 # The probability of observation decreases with factor = -1/distance_dependent_misclass * r + 1
     observation_likelihood_left:  1.0     # Likelihood of observing left              [0..1]
     observation_likelihood_right: 1.0     # Likelihood of observing right             [0..1]
     observation_likelihood_orange: 1.0    # Likelihood of observing right             [0..1]
     
-    color_observation_radius:     8.0    # We can obser color only below this threshild [m]
+    color_observation_radius:     10.0    # We can obser color only below this threshild [m]
     distance_dependent_misclass:  200.0   # The probability of color observation decreases with factor = -1/distance_dependent_misclass * r + 1
     likelihood_yellow:            0.8     # Likelihood of observic color of cones left  [0..1]
     likelihood_blue:              0.8     # Likelihood of observic color of cones right [0..1]
     likelihood_orange:            0.8     # Likelihood of observic color of cones right [0..1]
 
     gaussian_noise_xy_mu:         0.0     # Mean of Gaussian noise on [x,y] cone position
-    gaussian_noise_xy_sigma:      0.0     # Variance of Gaussian noise on [x,y] cone position
+    gaussian_noise_xy_sigma:      0.01     # Variance of Gaussian noise on [x,y] cone position
 
     gaussian_noise_mu_radial:     0.0     # Mean of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
-    gaussian_noise_sigma_radial:  0.05    # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
+    gaussian_noise_sigma_radial:  0.01     # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
 
     gaussian_noise_mu_angular:    0.00    # Mean of Gaussian noise on \theta (cone position is described with [r,\theta]) cone position (radial coordinates)
-    gaussian_noise_sigma_angular: 0.007   # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
+    gaussian_noise_sigma_angular: 0.01    # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
 
   camera_pipeline:
     enabled: true
@@ -88,10 +88,10 @@ sensors:
       enabled: true
       frame: fssim/vehicle/base_link      # Frame the cones are represented in
 
-    rate: 15                              # Publishing frequency [Hz]
+    rate: 10                              # Publishing frequency [Hz]
 
     delay: 
-      time: 0.2                           # Delay [s]
+      time: 0.01                           # Delay [s]
       noise_sigma: 0.002                  # Additive gassian noise on delay 
 
     cut_cones_below_x:            -1      # Cut cones that are further than this distance in x car axis
@@ -102,17 +102,17 @@ sensors:
     observation_likelihood_right: 1.0     # Likelihood of observing right             [0..1]
     observation_likelihood_orange: 1.0    # Likelihood of observing right             [0..1]
     
-    color_observation_radius:     16.0    # We can obser color only below this threshild [m]
+    color_observation_radius:     10.0    # We can obser color only below this threshild [m]
     distance_dependent_misclass:  200.0   # The probability of color observation decreases with factor = -1/distance_dependent_misclass * r + 1
     likelihood_yellow:            0.99     # Likelihood of observic color of cones left  [0..1]
     likelihood_blue:              0.99     # Likelihood of observic color of cones right [0..1]
     likelihood_orange:            0.99     # Likelihood of observic color of cones right [0..1]
 
     gaussian_noise_xy_mu:         0.0     # Mean of Gaussian noise on [x,y] cone position
-    gaussian_noise_xy_sigma:      0.0     # Variance of Gaussian noise on [x,y] cone position
+    gaussian_noise_xy_sigma:      0.1     # Variance of Gaussian noise on [x,y] cone position
 
     gaussian_noise_mu_radial:     0.0     # Mean of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
-    gaussian_noise_sigma_radial:  0.2    # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
+    gaussian_noise_sigma_radial:  0.01     # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
 
     gaussian_noise_mu_angular:    0.00    # Mean of Gaussian noise on \theta (cone position is described with [r,\theta]) cone position (radial coordinates)
-    gaussian_noise_sigma_angular: 0.007   # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
+    gaussian_noise_sigma_angular: 0.01   # Variance of Gaussian noise on r (cone position is described with [r,\theta]) cone position (radial coordinates)
